<resources>
    <string name="app_name">Gestiune Angajati</string>
    <string name="todo" />
    <string name="id_utilizator">ID Utilizator</string>
    <string name="parola">Parola</string>
    <string name="butonLogin">Login</string>
    <string name="linkInregistrare">Nu ai cont? Înregistrează-te!</string>
    <string name="rbAngajat">Angajat</string>
    <string name="rbManager">Manager</string>
    <string name="todo2">TODO</string>
    <string name="nume">Nume</string>
    <string name="prenume">Prenume</string>
    <string name="e_mail">E-mail</string>
    <string name="username">Username</string>
    <string name="data_nasterii">Data nasterii</string>
    <string name="inregistrare">Înregistrare</string>
    <string name="functie_de_manager">Functie de manager</string>
    <string name="alegeti_departamentul">Alegeti departamentul din care faceti parte:</string>
    <string name="alegeti_managerul">Daca nu detineti functie de manager, alegeti managerul dumneavoastra:</string>
    <string name="butonPoza">schimbaProfilA</string>
    <string name="profilA">profilA</string>
    <string name="activitatile_mele">Activitatile mele</string>
    <string name="activitatileMele">SpreActivitatiAngajat</string>
    <string name="setari_cont">Setari cont</string>
    <string name="tvUsername">Username:</string>
    <string name="tvDepartament">Departament:</string>
    <string name="deconectare">Deconectare</string>
    <string name="angajatii_mei">Angajatii mei</string>
    <string name="agenda">Agenda</string>
    <string name="progres">Progres</string>
    <string name="setari">Setari</string>
    <string name="scrie_aici">Scrie aici...</string>
    <string name="parola_veche">Parola veche</string>
    <string name="salveaza_modificari">Salveaza modificari</string>
    <string name="parola_noua">Parola noua</string>
</resources>
