<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F4FDFF"
    android:fillViewport="true">
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
<ImageView
android:id="@+id/loginLogo"
android:layout_width="100dp"
android:layout_height="100dp"
android:layout_marginStart="32dp"
android:layout_marginTop="96dp"
android:layout_marginEnd="32dp"
android:contentDescription="@string/todo"
app:layout_constraintEnd_toEndOf="parent"
app:layout_constraintStart_toStartOf="parent"
app:layout_constraintTop_toTopOf="parent"
app:srcCompat="@drawable/ic_login" />

<EditText
android:id="@+id/idUtilizatorLogin"
android:layout_width="300dp"
android:layout_height="wrap_content"
android:layout_below="@+id/loginLogo"
android:layout_centerHorizontal="true"
android:layout_marginStart="32dp"
android:layout_marginTop="64dp"
android:layout_marginEnd="32dp"
android:autofillHints=""
android:drawableStart="@drawable/ic_user"
android:ems="10"
android:hint="@string/id_utilizator"
android:inputType="text"
app:layout_constraintEnd_toEndOf="parent"
app:layout_constraintStart_toStartOf="parent"
app:layout_constraintTop_toBottomOf="@+id/loginLogo"
tools:targetApi="o" />

<EditText
android:id="@+id/parolaLogin"
android:layout_width="300dp"
android:layout_height="wrap_content"
android:layout_marginStart="32dp"
android:layout_marginTop="16dp"
android:layout_marginEnd="32dp"
android:autofillHints=""
android:drawableStart="@drawable/ic_password"
android:ems="10"
android:hint="@string/parola"
android:inputType="textPassword"
app:layout_constraintEnd_toEndOf="parent"
app:layout_constraintStart_toStartOf="parent"
app:layout_constraintTop_toBottomOf="@+id/idUtilizatorLogin" tools:targetApi="o" />

<Button
android:id="@+id/butonLogin"
android:layout_width="150dp"
android:layout_height="wrap_content"
android:layout_marginStart="32dp"
android:layout_marginTop="32dp"
android:layout_marginEnd="32dp"
android:bottomLeftRadius="20dp"
android:bottomRightRadius="20dp"
android:onClick="buttonClick"
android:text="@string/butonLogin"
android:topLeftRadius="20dp"
android:topRightRadius="20dp"
app:layout_constraintEnd_toEndOf="parent"
app:layout_constraintHorizontal_bias="0.497"
app:layout_constraintStart_toStartOf="parent"
app:layout_constraintTop_toBottomOf="@+id/radioGroupLogin" />

<TextView
android:id="@+id/linkActivitateInregistrare"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:layout_marginStart="32dp"
android:layout_marginTop="32dp"
android:layout_marginEnd="32dp"
android:layout_marginBottom="96dp"
android:onClick="inregistrareClick"
android:text="@string/linkInregistrare"
app:layout_constraintBottom_toBottomOf="parent"
app:layout_constraintEnd_toEndOf="parent"
app:layout_constraintStart_toStartOf="parent"
app:layout_constraintTop_toBottomOf="@+id/butonLogin" />

<RadioGroup
android:id="@+id/radioGroupLogin"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:layout_marginStart="32dp"
android:layout_marginTop="32dp"
android:layout_marginEnd="32dp"
android:gravity="center"
app:layout_constraintEnd_toEndOf="parent"
app:layout_constraintStart_toStartOf="parent"
app:layout_constraintTop_toBottomOf="@+id/parolaLogin">

<RadioButton
    android:id="@+id/radioButtonAngajat"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_weight="1"
    android:text="@string/rbAngajat" />

<RadioButton
    android:id="@+id/radioButtonManager"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_weight="1"
    android:text="@string/rbManager" />
</RadioGroup>
</android.support.constraint.ConstraintLayout>
</ScrollView>