<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F4FDFF"
    android:fillViewport="true">
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfilAngajat">

    <ImageView
        android:id="@+id/imagineProfilAngajat"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/profilA"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_profil" />

    <ImageButton
        android:id="@+id/butonSchimbareImagineProfil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="180dp"
        android:layout_marginEnd="50dp"
        android:contentDescription="@string/butonPoza"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imagineProfilAngajat"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_camera" />

    <android.support.v7.widget.CardView
        android:id="@+id/cvActivitatileMele"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="32dp"
        android:onClick="actitatileMeleClick"
        app:cardBackgroundColor="@color/colorPrimary"
        app:cardCornerRadius="20dp"
        app:cardElevation="5dp"
        app:layout_constraintEnd_toStartOf="@+id/cvSetari"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDepartament">

        <TextView
            android:id="@+id/tvListaActivitatileMele"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_gravity="center|top"
            android:foregroundGravity="center_vertical|center"
            android:gravity="center|center_horizontal"
            android:text="@string/activitatile_mele"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/ivTasks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@string/activitatileMele"
            android:foregroundGravity="center"
            app:srcCompat="@drawable/ic_task2" />

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/cvSetari"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="50dp"
        android:onClick="setariClick"
        app:cardBackgroundColor="@color/colorPrimary"
        app:cardCornerRadius="20dp"
        app:cardElevation="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cvActivitatileMele"
        app:layout_constraintTop_toBottomOf="@+id/tvDepartament">

        <TextView
            android:id="@+id/tvSetari"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_gravity="center|top"
            android:foregroundGravity="center_vertical|center"
            android:gravity="center|center_horizontal"
            android:text="@string/setari_cont"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@string/activitatileMele"
            android:foregroundGravity="center"
            app:srcCompat="@drawable/ic_editare" />
    </android.support.v7.widget.CardView>

    <TextView
        android:id="@+id/tvUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="290dp"
        android:text="@string/tvUsername"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imagineProfilAngajat" />

    <TextView
        android:id="@+id/tvDepartament"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="271dp"
        android:text="@string/tvDepartament"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvUsername" />

    <Button
        android:id="@+id/buttonDeconectare"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="50dp"
        android:onClick="deconectareClick"
        android:text="@string/deconectare"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cvSetari" />

</android.support.constraint.ConstraintLayout>
</ScrollView>
